[package]
name = "custom_file_crawler"
version = "0.1.0"
edition = "2024"

[[test]]
name = "async"
path = "tests/async.rs"


[dependencies]
regex="1.11.2"
anyhow = { version = "1.0.99", optional = true }
tokio = { version = "1.47.1", features = ["fs","full"] }
rayon="1.11.0"

[features]

default=[]

legacy=["anyhow/default"]
