[package]
name = "custom_file_crawler"
version = "0.1.0"
edition = "2024"
keywords = ["async", "fs", "crawler", "tokio", "rayon"]
categories = ["concurrency"]
license = "MIT"
license-file = "LICENSE"


[dependencies]
regex="1.11.2"
tokio = { version = "1.47.1", features = ["sync", "fs","rt"] }
rayon="1.11.0"


[features]

default=[]
