[package]
name = "file-crawler"
version = "0.1.3"
edition = "2024"
keywords = ["async", "fs", "crawler", "tokio", "rayon"]
categories = ["concurrency"]
license = "MIT"
authors = ["Jonathan Schmittat"]
repository = "https://github.com/HQ2000-Rust/Custom-File-Crawler"
readme = "README.md"
description = "A fast, concurrent, async and customisable file crawler"

[dependencies]
regex = { version = "1.11.2"}
tokio = { version = "1.47.1", features = ["sync", "fs","rt"] , optional = true }
rayon = { version = "1.11.0" , optional = true }

[features]

default=["parallel"]

parallel=["dep:rayon"]

async=["dep:tokio"]

lazy_store=[]

[package.metadata.docs.rs]
all-features = true
